recursion.lessons.recursion.koch.Koch.scala.error
Koch:2: error: ':' expected but ',' found.
def snowFlake(levels, length);
                    ^Koch:10: error: identifier expected but '}' found.
}
^Koch:13: error: expected class or object definition
def snowSide (levels:Int, length:Double) {
^