recursion.lessons.recursion.koch.Koch.scala.code
def snowFlake(levels, length);
right(120);
setColor(Color.blue);
snowSide(levels, length);
right(120);
setColor(Color.orange);
snowSide(levels, length);
right(120);
}


def snowSide (levels:Int, length:Double) {
while(levels>=1)
{
avance(length);
gauche(150);
avance(length);
gauche(150);
avance(length);
snowFlake (levels-1, length/3)

}